--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,33 @@
 [submodule "bundle/surround"]
 	path = bundle/surround
 	url = https://github.com/tpope/vim-surround.git
+[submodule "bundle/ack"]
+	path = bundle/ack
+	url = https://github.com/mileszs/ack.vim.git
+[submodule "bundle/gist"]
+	path = bundle/gist
+	url = https://github.com/mattn/gist-vim.git
+[submodule "bundle/pastie"]
+	path = bundle/pastie
+	url = https://github.com/tpope/vim-pastie.git
+[submodule "bundle/viki"]
+	path = bundle/viki
+	url = https://github.com/tomtom/viki_vim.git
+[submodule "bundle/bufonly"]
+	path = bundle/bufonly
+	url = https://github.com/duff/vim-bufonly.git
+[submodule "bundle/tlib"]
+	path = bundle/tlib
+	url = https://github.com/tomtom/tlib_vim.git
+[submodule "bundle/tag_list"]
+	path = bundle/tag_list
+	url = https://github.com/jcf/tag_list.vim.git
+[submodule "bundle/ragtag"]
+	path = bundle/ragtag
+	url = https://github.com/tpope/vim-ragtag.git
+[submodule "bundle/supertab"]
+	path = bundle/supertab
+	url = https://github.com/tsaleh/vim-supertab.git
+[submodule "bundle/pathogen"]
+	path = bundle/pathogen
+	url = https://github.com/tpope/vim-pathogen.git
