--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,30 @@
 [submodule "bundle/pathogen"]
 	path = bundle/pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "bundle/nerd_commenter"]
+	path = bundle/nerd_commenter
+	url = https://github.com/vim-scripts/The-NERD-Commenter.git
+[submodule "matchit.zip"]
+	path = matchit.zip
+	url = https://github.com/vim-scripts/matchit.zip.git
+[submodule "bundle/nerd_tree"]
+	path = bundle/nerd_tree
+	url = https://github.com/vim-scripts/NERD_tree-Project.git
+[submodule "bundle/snipmate"]
+	path = bundle/snipmate
+	url = https://github.com/msanders/snipmate.vim.git
+[submodule "bundle/command_t"]
+	path = bundle/command_t
+	url = https://github.com/vim-scripts/Command-T.git
+[submodule "bundle/fuzzyfinder"]
+	path = bundle/fuzzyfinder
+	url = https://github.com/vim-scripts/FuzzyFinder.git
+[submodule "bundle/genutils"]
+	path = bundle/genutils
+	url = https://github.com/vim-scripts/genutils.git
+[submodule "bundle/rubycomplete"]
+	path = bundle/rubycomplete
+	url = https://github.com/vim-scripts/rubycomplete.vim.git
+[submodule "bundle/simple_pairs"]
+	path = bundle/simple_pairs
+	url = https://github.com/vim-scripts/simple-pairs.git
