--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "bundle/nerd_tree"]
 	path = bundle/nerd_tree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "bundle/nerd_tree_with_ack"]
+	path = bundle/nerd_tree_with_ack
+	url = https://github.com/vim-scripts/NERD_Tree-and-ack.git
