--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,9 @@
 [submodule "bundle/csapprox"]
 	path = bundle/csapprox
 	url = https://github.com/vim-scripts/CSApprox.git
+[submodule "bundle/rake"]
+	path = bundle/rake
+	url = https://github.com/tpope/vim-rake.git
+[submodule "bundle/markdown"]
+	path = bundle/markdown
+	url = https://github.com/tpope/vim-markdown.git
