--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "bundle/ruby_debugger"]
 	path = bundle/ruby_debugger
 	url = https://github.com/astashov/vim-ruby-debugger.git
+[submodule "bundle/conque_term"]
+	path = bundle/conque_term
+	url = https://github.com/rygwdn/vim-conque.git
