--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "bundle/conque_term"]
 	path = bundle/conque_term
 	url = https://github.com/rygwdn/vim-conque.git
+[submodule "bundle/mexpolk-snippets/snippets"]
+	path = bundle/mexpolk-snippets/snippets
+	url = https://github.com/mexpolk/snipmate-snippets.git
