--- a/.gitmodules
+++ b/.gitmodules
@@ -7,9 +7,6 @@
 [submodule "bundle/speeddating"]
 	path = bundle/speeddating
 	url = https://github.com/tpope/vim-speeddating.git
-[submodule "bundle/preview"]
-	path = bundle/preview
-	url = https://github.com/vim-scripts/preview.git
 [submodule "bundle/haml"]
 	path = bundle/haml
 	url = https://github.com/tpope/vim-haml.git
@@ -121,3 +118,6 @@
 [submodule "bundle/dbext"]
 	path = bundle/dbext
 	url = https://github.com/vim-scripts/dbext.vim.git
+[submodule "bundle/preview"]
+	path = bundle/preview
+	url = https://github.com/greyblake/vim-preview.git
